Started work on actually downloading mods